--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,3 +30,15 @@
   box-shadow: 0px 0px 8px 0px #000000EB;
 }
 /* End range */
+
+.play-audio .inner-button-play .inner-icon-pause {
+  display: none;
+}
+
+.play-audio .inner-button-play.play .inner-icon-play {
+  display: none;
+}
+
+.play-audio .inner-button-play.play .inner-icon-pause {
+  display: block;
+}
