Tính năng chuyển bài hát, Tính năng đăng ký, Tính năng đăng nhập

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,3 +42,7 @@
 .play-audio .inner-button-play.play .inner-icon-pause {
   display: block;
 }
+
+[song-id].active .inner-button-play {
+  background-color: #00ADEF;
+}
